# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[tool.poetry]
name = "apache-superset"
version = "0.1.1"
description = "A modern, enterprise-ready business intelligence web application"

license = "Apache-2.0"

authors = ["Apache Software Foundation <dev@superset.incubator.apache.org>"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/apache/incubator-superset"
homepage = "https://superset.apache.org/"
packages = [
     { include = "superset" }
]

keywords = ["superset"]

[tool.poetry.dependencies]
python = "~3.6"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
bleach = { version = "^3.0.2" }
celery = { version = "^4.3.0" }
click = { version = "^6.0" }
colorama = { version = "^0" }
contextlib2 = { version = "^0" }
croniter = { version = "^0.3.28" }
cryptography = { version = "^2.4.2" }
flask = { version = "^1" }
flask-appbuilder = { version = "^2.1.9" }
flask-caching = { version = "^1.4" }
flask-compress = { version = "^1.4" }
flask-talisman = { version = "^0" }
flask-migrate = { version = "^2.1.1" }
flask-wtf = { version = "^0" }
geopy = { version = "^1" }
gunicorn = { version = "~19.8" }
humanize = { version = "^0" }
idna = { version = "^2" }
isodate = { version = "^0" }
markdown = { version = "^3.0" }
pandas = { version = "~0.24.2"}
parsedatetime = { version = "^2" }
pathlib2 = { version = "^2" }
polyline = { version = "^1" }
python-dateutil = { version = "^2" }
python-dotenv = { version = "^0" }
python-geohash = { version = "^0" }
pyyaml = { version = "^5.1" }
retry = { version = "^0.9.2" }
selenium = { version = "^3.141" }
simplejson = { version = "^3.15" }
sqlalchemy = { version = "^1.3.5" }
sqlalchemy-utils = { version = "^0.33.2" }
sqlparse = { version = "^0.3" }
wtforms-json = { version = "^0" }

# Optional dependencies (extras)
pybigquery = { version = "^0.4.10", optional = true }
pandas_gbq = { version = "^0.10.0", optional = true }
flask-cors = { version = "^3", optional = true }
gsheetsdb = { version = "^0.1.9", optional = true }
pyhive = { version = "^0.6.1", optional = true }
tableschema = { version = "^1.6", optional = true }
thrift = { version = "^0.11", optional = true }
mysqlclient= { version = "1.4.2.post1", optional = true }
psycopg2-binary = { version = "2.7.5", optional = true }
pydruid = { version = "^0.5.2", optional = true }
requests = { version = "2.22.0", optional = true }

[tool.poetry.extras]
bigquery = ["pybigquery", "pandas_gbq"]
cors = ["flask-cors"]
gsheets = ["gsheetsdb"]
hive = ["pyhive[hive]", "tableschema", "thrift"]
mysql = ["mysqlclient"]
postgres = ["psycopg2-binary"]
presto = ["pyhive[presto]"]
druid = ["pydruid", "requests"]

[tool.poetry.dev-dependencies]
black = { version = "19.3b0" }
coverage = { version = "4.5.3" }
flake8-import-order = { version="0.18.1" }
flake8-mypy = { version = "17.8.0" }
flake8 = { version = "3.7.7" }
flask-cors = { version = "3.0.7" }
ipdb = { version = "0.12" }
mypy = { version = "0.670" }
nose = { version = "1.3.7" }
pip-tools = { version = "3.7.0" }
pre-commit = { version = "1.17.0" }
psycopg2-binary = { version = "2.7.5" }
pycodestyle = { version = "2.5.0" }
pydruid = { version = "0.5.6" }
pyhive = { version = "0.6.1" }
pylint = { version = "1.9.2" }
redis = { version = "3.2.1" }
requests = { version = "2.22.0" }
statsd = { version = "3.3.0" }
tox = { version = "3.11.1" }

[tool.poetry.scripts]
superset = 'superset.bin.superset:cli'
