
[project]
name = "apache-superset-primitives"
version = "0.0.1"
description = "Common components for Apache Superset"
authors = [
    { name = "Apache Software Foundation", email = "dev@superset.apache.org" },
]
license = { file="LICENSE.txt" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask-appbuilder>=4.5.3, <5.0.0",
]

[build-system]
requires = ["setuptools>=76.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["superset_primitives"]
