[package]
name = "oxc-superset-rules"
version = "0.1.0"
edition = "2021"
authors = ["Apache Superset Contributors"]
description = "Custom OXC linting rules for Apache Superset"
license = "Apache-2.0"

[dependencies]
oxc_allocator = "0.30.0"
oxc_ast = "0.30.0"
oxc_diagnostics = "0.30.0"
oxc_macros = "0.30.0"
oxc_semantic = "0.30.0"
oxc_span = "0.30.0"
oxc_linter = "0.30.0"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.34"

[lib]
name = "oxc_superset_rules"
path = "src/lib.rs"
